# OpenGL_Learn

./: CMakeLists.txt  README.md  build.cmd  clean.cmd
cmake/: FindGLFW.cmake
practice1/: CMakeLists.txt  main.cpp
practice1/include/: camera.h  practice1.h  shader_s.h
practice1/source/: camera.cpp  coordinate.cpp  fragmentShader.fs  shader.cpp  texture.cpp  textureFragmentShader.fs  textureVertextShader.vs  transform.cpp  triangle.cpp  vertexShader.vs  window.cpp
practice2/: CMakeLists.txt  main.cpp
practice2/include/: camera.h  practice2.h  shader_s.h
practice2/source/: illumination.cpp
practice2/source/illumination/: fragmentShader_light.fs  vertexShader_light.vs
resource/script/: main.py
window/: window.cpp  新文件 1.txt
